# ChangeLog for games-emulation/fceultra
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/fceultra/ChangeLog,v 1.5 2003/11/13 06:59:13 mr_bones_ Exp $

*fceultra-0.97.5 (12 Nov 2003)

  12 Nov 2003; Michael Sterrett <mr_bones_@gentoo.org> fceultra-0.97.5.ebuild,
  files/0.97.5-joystick.patch:
  version bump

*fceultra-0.97.4 (10 Nov 2003)

  10 Nov 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump.

*fceultra-081-r1 (17 Sep 2003)

  17 Sep 2003; Michael Sterrett <msterret@gentoo.org> fceultra-081-r1.ebuild:
  put fceultra-081-r1.ebuild back in for the default-1.0 folks. (bug 28321)

  21 Jul 2003; Phil Bordelon <sunflare@gentoo.org> :
  Just a note that the patches vapier committed are from Jeff Balk
  <balk0016@umn.edu>.

*fceultra-096 (24 Jun 2003)

  27 Jun 2003; Mike Frysinger <vapier@gentoo.org> :
  Tweaked syntax and unmasked for #20320.

  24 Jun 2003; Phil Bordelon <sunflare@gentoo.org> fceultra-096.ebuild:
  Version bump. Note that this version seems to have a couple of issues with
  joystick control; only upgrade if necessary, until an upstream version with
  fixes appears.

*fceultra-093 (18 Mar 2003)

  18 Mar 2003; Phil Bordelon <sunflare@gentoo.org> fceultra-093.ebuild:
  Updated to the latest version of fceultra.  This requires GCC 3.2.2, so
  it's got that as a requirement now.  Marked as testing for obvious
  reasons.

*fceultra-081-r1 (22 Nov 2002)

  01 Dec 2002; Mike Frysinger <vapier@gentoo.org> :
  Added a check that if the compiler is gcc3.x, the ebuild fails #11426

  22 Nov 2002; Mike Frysinger <vapier@gentoo.org> :
  Added support for sdl version #11089

*fceultra-081 (21 Nov 2002)

  21 Nov 2002; Mike Frysinger <vapier@gentoo.org> :
  Version bumpage

*fceultra-080 (24 Jul 2002)

  06 Aug 2002; Mark Guertin <gerk@gentoo.org> :
  Added -ppc to keywords

  24 July 2002; Sascha Schwabbauer <cybersystem@gentoo.org> fceultra-080.ebuild :