@@ -1,6 +1,12 @@
 # ChangeLog for games-emulation/fceultra
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/fceultra/ChangeLog,v 1.5 2003/11/13 06:59:13 mr_bones_ Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/fceultra/ChangeLog,v 1.6 2004/05/29 22:25:59 dholm Exp $
+
+*fceultra-0.98.10 (30 May 2004)
+
+  30 May 2004; David Holm <dholm@gentoo.org> +fceultra-0.98.10.ebuild:
+  Version bump.
+  Added to ~ppc.
 
 *fceultra-0.97.5 (12 Nov 2003)
 
